--- a/activities.html
+++ b/activities.html
@@ -165,116 +165,396 @@
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>March 30, 2023</p>
+                            <h6>250 FOOD PACKS FOR THE FORCIBLY DISPLACED PEOPL </h6>
+                        </div>
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 15,2023</p>
+                            <h6>CIS paid a courtesy visit to welcome the newly </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="activities-img">
                         <img src="./assets/img/Saber-Hossain.jpg" alt="">
+
+                        <h5>ACTIVITY</h5>
+                        <div class="activities-img-massage-logo">
+                            <i class="fa-solid fa-comments"></i>
+                            <span>0</span>
+                        </div>
+                        <div class="activities-img-text">
+                            <p>April 16,2023</p>
+                            <h6>“A-PAD AWARD 2023” TO MR. SABER HOSSAIN </h6>
+                        </div>
+
+
                     </div>
                 </div>
                 <div class="col-sm-4"></div>
