--- a/index.html
+++ b/index.html
@@ -313,7 +313,12 @@
           <div class="content-area">
             <div class="content">
               <div class="img-area">
-                <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+
+                <div class="img-area-picture">
+                  <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <h5>ACTIVITY</h5>
+                </div>
+
                 <a href="#">Completed Successfully NPF Project For 3 Years In Bangladesh</a>
                 <p>Community Initiative Society (CIS) in collaboration with Asta Pacific Alliance for Disaster
                   Management (A-PAD) completed successfully NPF project for 3 years in Bangladesh. CIS established 7
@@ -325,7 +330,10 @@
           <div class="content-area">
             <div class="content">
               <div class="img-area">
-                <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                <div class="img-area-picture">
+                  <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <h5>ACTIVITY</h5>
+                </div>
 
                 <a href="#">"A-PAD Award 2023" to Mr. Saber Hossain Chowdhury MP, Group Director, Karnaphuli Group</a>
 
@@ -339,7 +347,10 @@
           <div class="content-area">
             <div class="content">
               <div class="img-area">
-                <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                <div class="img-area-picture">
+                  <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <h5>ACTIVITY</h5>
+                </div>
 
                 <a href="#">250 food packs for the Forcibly Displaced People from Myanmar (FDMNs) at Camp- 15 Jamtoli
                   CPHC center</a>
@@ -353,7 +364,10 @@
           <div class="content-area">
             <div class="content">
               <div class="img-area">
-                <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                <div class="img-area-picture">
+                  <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <h5>ACTIVITY</h5>
+                </div>
 
                 <a href="#">CIS paid a courtesy visit to welcome the newly appointed Honorable Ambassador Mr. Iwama
                   Kiminori at the Embassy of Japan in Bangladesh</a>
@@ -366,7 +380,10 @@
           <div class="content-area">
             <div class="content">
               <div class="img-area">
-                <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                <div class="img-area-picture">
+                  <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <h5>ACTIVITY</h5>
+                </div>
 
                 <a href="#">Disaster Preparedness Day 2023</a>
                 <p>The Government of Bangladesh organized a drilling session celebrating Disaster Preparedness Day 2023
@@ -380,7 +397,10 @@
           <div class="content-area">
             <div class="content">
               <div class="img-area">
-                <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                <div class="img-area-picture">
+                  <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <h5>ACTIVITY</h5>
+                </div>
 
                 <a href="#">Arranged the monthly progress meeting, sports and price giving program at Mawa resort
                 </a>
@@ -706,8 +726,68 @@
           </div>
 
           <!-- gallary-others -->
-          <div id="events" class="container tab-pane fade"><br>das</div>
-          <div id="emergency" class="container tab-pane fade"><br>ada</div>
+          <div id="events" class="container tab-pane fade"><br>
+
+
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+          <div id="emergency" class="container tab-pane fade"><br>
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="gallary-img">
+                  <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
           <div id="disaster" class="container tab-pane fade"><br>dsada</div>
           <div id="training" class="container tab-pane fade"><br>dsas</div>
           <div id="awerness" class="container tab-pane fade"><br>dsa</div>
