--- a/contact-us.html
+++ b/contact-us.html
@@ -218,9 +218,7 @@
     <!-- contact-us-section-end -->
     <section id="contact-us-map">
         <div class="contact-map">
-            <iframe
-                src="https://www.google.com/maps/search/community+initiative+society/@24.7619484,90.3312883,18.5z?hl=en&entry=ttu"
-                frameborder="0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1825.9644951147184!2d90.40632454442749!3d23.749911500000007!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b907ebfd2f6f%3A0x73733f9c6c634f!2sCommunity%20Initiative%20Society!5e0!3m2!1sen!2sus!4v1699354926690!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
