--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
 
                 <div class="img-area-picture">
                   <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <div class="image-overlay"></div>
                   <h5>ACTIVITY</h5>
                 </div>
 
@@ -324,6 +325,7 @@
                   Management (A-PAD) completed successfully NPF project for 3 years in Bangladesh. CIS established 7
                   Disaster Coordination Center in...</p>
                 <a href="#" class="read" style=" margin-top: 40px;">Read More</a>
+             
               </div>
             </div>
           </div>
