--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                   Management (A-PAD) completed successfully NPF project for 3 years in Bangladesh. CIS established 7
                   Disaster Coordination Center in...</p>
                 <a href="#" class="read" style=" margin-top: 40px;">Read More</a>
-             
+
               </div>
             </div>
           </div>
@@ -334,6 +334,7 @@
               <div class="img-area">
                 <div class="img-area-picture">
                   <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <div class="image-overlay"></div>
                   <h5>ACTIVITY</h5>
                 </div>
 
@@ -351,6 +352,7 @@
               <div class="img-area">
                 <div class="img-area-picture">
                   <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <div class="image-overlay"></div>
                   <h5>ACTIVITY</h5>
                 </div>
 
@@ -368,6 +370,7 @@
               <div class="img-area">
                 <div class="img-area-picture">
                   <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <div class="image-overlay"></div>
                   <h5>ACTIVITY</h5>
                 </div>
 
@@ -384,6 +387,7 @@
               <div class="img-area">
                 <div class="img-area-picture">
                   <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <div class="image-overlay"></div>
                   <h5>ACTIVITY</h5>
                 </div>
 
@@ -401,6 +405,7 @@
               <div class="img-area">
                 <div class="img-area-picture">
                   <img src="./assets/img/Embassy-of-Japan-in-Bangladesh-1.jpeg" alt="" />
+                  <div class="image-overlay"></div>
                   <h5>ACTIVITY</h5>
                 </div>
 
@@ -681,47 +686,58 @@
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay">
+                    <h5>Cyclone Mocha Disaster <br> Preparedness</h5>
+                  </div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
 
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
             </div>
@@ -735,31 +751,37 @@
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
             </div>
@@ -771,21 +793,25 @@
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="gallary-img">
                   <img src="./assets/img/gallari/covid19-response-cis-1.jpg" alt="">
+                  <div class="gallary-image-overlay"></div>
                 </div>
               </div>
             </div>
