--- a/contact-us.html
+++ b/contact-us.html
@@ -57,7 +57,22 @@
                                     <a class="dropdown-item" href="./mission&vision.html">Mission and Vision</a>
                                 </li>
                                 <li><a class="dropdown-item" href="./governing board.html">Governing Board</a></li>
-                                <li><a class="dropdown-item" href="./Partners.html">Partner</a></li>
+                                <!-- <li><a class="dropdown-item" href="./Partners.html">Partner</a></li> -->
+                                <!-- partic -->
+                                <li class="nav-item dropend">
+                                    <a class="nav-link dropdown-toggle" id="dropdown_items" href="#" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Partner
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="./International-Partners.html">International
+                                                <br>
+                                                Partners</a></li>
+                                        <li><a class="dropdown-item" href="./National Partners.html">National
+                                                Partners</a>
+                                        </li>
+                                    </ul>
+                                    <!-- partic -->
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -97,7 +112,25 @@
                                 </li>
                                 <li><a class="dropdown-item" href="./stories.html">Stories</a></li>
                                 <li><a class="dropdown-item" href="./publication.html">Publication </a></li>
-                                <li><a class="dropdown-item" href="#">Media Coverage</a></li>
+                                <!-- <li><a class="dropdown-item" href="#">Media Coverage</a></li> -->
+
+                                <!-- partic -->
+                                <li class="nav-item dropend">
+                                    <a class="nav-link dropdown-toggle" id="dropdown_items" href="#" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Media Coverage
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="./International-Partners.html">Print
+                                                Media</a></li>
+                                        <li><a class="dropdown-item" href="./National Partners.html"> Electronic
+                                                Media</a>
+                                        </li>
+                                    </ul>
+                                    <!-- partic -->
+
+
+
                                 <li><a class="dropdown-item" href="./photo gallery.html">Photo Gallery</a></li>
                             </ul>
                         </li>
@@ -218,7 +251,10 @@
     <!-- contact-us-section-end -->
     <section id="contact-us-map">
         <div class="contact-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1825.9644951147184!2d90.40632454442749!3d23.749911500000007!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b907ebfd2f6f%3A0x73733f9c6c634f!2sCommunity%20Initiative%20Society!5e0!3m2!1sen!2sus!4v1699354926690!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1825.9644951147184!2d90.40632454442749!3d23.749911500000007!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b907ebfd2f6f%3A0x73733f9c6c634f!2sCommunity%20Initiative%20Society!5e0!3m2!1sen!2sus!4v1699354926690!5m2!1sen!2sus"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
