--- a/index.html
+++ b/index.html
@@ -54,7 +54,22 @@
                   <a class="dropdown-item" href="./mission&vision.html">Mission and Vision</a>
                 </li>
                 <li><a class="dropdown-item" href="./governing board.html">Governing Board</a></li>
-                <li><a class="dropdown-item" href="./Partners.html">Partner </a></li>
+                <!-- <li><a class="dropdown-item" href="./Partners.html">Partner</a></li> -->
+                <!-- partic -->
+                <li class="nav-item dropend">
+                  <a class="nav-link dropdown-toggle" id="dropdown_items" href="#" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    Partner
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./International-Partners.html">International
+                        <br>
+                        Partners</a></li>
+                    <li><a class="dropdown-item" href="./National Partners.html">National
+                        Partners</a>
+                    </li>
+                  </ul>
+                  <!-- partic -->
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -94,7 +109,25 @@
                 </li>
                 <li><a class="dropdown-item" href="./stories.html">Stories</a></li>
                 <li><a class="dropdown-item" href="./publication.html">Publication </a></li>
-                <li><a class="dropdown-item" href="#">Media Coverage</a></li>
+                <!-- <li><a class="dropdown-item" href="#">Media Coverage</a></li> -->
+
+                <!-- partic -->
+                <li class="nav-item dropend">
+                  <a class="nav-link dropdown-toggle" id="dropdown_items" href="#" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    Media Coverage
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./International-Partners.html">Print
+                        Media</a></li>
+                    <li><a class="dropdown-item" href="./National Partners.html"> Electronic
+                        Media</a>
+                    </li>
+                  </ul>
+                  <!-- partic -->
+
+
+
                 <li><a class="dropdown-item" href="./photo gallery.html">Photo Gallery</a></li>
               </ul>
             </li>
@@ -136,7 +169,8 @@
                   <a class="dropdown-item" href="./dropyour-resume.html">Drop Your Resume</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./vacancy-announcements.html">Vacancy <br />Announcements
+                  <a class="dropdown-item" href="./vacancy-announcements.html">Vacancy
+                    <br />Announcements
                   </a>
                 </li>
               </ul>
