--- a/dropyour-resume.html
+++ b/dropyour-resume.html
@@ -122,9 +122,9 @@
                                         Media Coverage
                                     </a>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="./International-Partners.html">Print
+                                        <li><a class="dropdown-item" href="./print-media.html">Print
                                                 Media</a></li>
-                                        <li><a class="dropdown-item" href="./National Partners.html"> Electronic
+                                        <li><a class="dropdown-item" href="./electronic-media.html"> Electronic
                                                 Media</a>
                                         </li>
                                     </ul>
